--- a/catalogue/templates/contacts.html
+++ b/catalogue/templates/contacts.html
@@ -3,8 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Contacts</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Contacts table</h1>
+    <h1 class="text-center">Contacts table</h1>
+        <table class="table table-bordered">
+
+            {% for contact in  contact_list %}
+
+{#                <h6 class="text-center">{{ contact.department }}</h6>#}
+
+
+            <tr>
+                <td>{{ contact.name }}</td>
+                <td>{{ contact.position }} </td>
+                <td>{{ contact.cell }} </td>
+                <td>{{ contact.phone }} </td>
+
+
+            </tr>
+            {% endfor %}
+        </table>
 </body>
 </html>
