--- a/catalogue/templates/contacts.html
+++ b/catalogue/templates/contacts.html
@@ -6,19 +6,48 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <h1 class="text-center">Contacts table</h1>
-        <table class="table table-bordered">
 
+
+
+    <h1 class="text-center mt-5">Справочник</h1>
+
+    <form action="" class="form-inline my-2 my-lg-0">
+        <input type="search" class="form-control mr-sm-2" placeholder="Искать" name="q" aria-label="search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Искать </button>
+    </form>
+
+        <table class="table table-bordered table-striped table-hover mt-5" style=" margin: auto; width: 50% !important;">
+        <tr class="bg-success">
+        <th>Имя</th>
+        <th>Департамент</th>
+        <th>Отдел</th>
+        <th>Должность</th>
+        <th>Сотовый телефон</th>
+        <th>Телефон</th>
+        </tr>
             {% for contact in  contact_list %}
 
-{#                <h6 class="text-center">{{ contact.department }}</h6>#}
+
+{#               {{% if count == 0 %}#}
+
+{#               {% endif %} }#}
+
+
 
 
             <tr>
                 <td>{{ contact.name }}</td>
+                <td>{% if contact.department  %}
+                {{ contact.department }}
+                {% endif %}</td>
+
+
+                <td>{% if contact.division  %}
+                {{ contact.division }}
+                {% endif %} </td>
                 <td>{{ contact.position }} </td>
-                <td>{{ contact.cell }} </td>
-                <td>{{ contact.phone }} </td>
+                <td><a href="tel:{{ contact.cell }}">{{ contact.cell }}</a> </td>
+                <td><a href="tel:{{ contact.phone }}"> {{ contact.phone }} </a>  </td>
 
 
             </tr>
